[tool.poetry]
name = "kiwifruit"
version = "0.1.0"
description = "web vulnerabilty scanner for python 3"
authors = ["seaung <seaung.c0m7de@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
