[tool.poetry]
name = "kiwifruit"
version = "0.1.0"
description = "web vulnerabilty scanner for python 3"
authors = ["seaung <seaung.c0m7de@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
python-dotenv = "^0.19.2"
Flask-SQLAlchemy = "^2.5.1"
requests = "^2.28.1"
gevent = "^22.10.2"
mysqlclient = "^2.1.1"
bs4 = "^0.0.1"
Flask-Admin = "^1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
